--- a/academic.html
+++ b/academic.html
@@ -1,1 +1,244 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Academics & Resources | Greenwood High School</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" alt="School Logo" height="50">
+                Greenwood High
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="academics.html">Academics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="achievements.html">Achievements</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="calendar.html">Calendar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- Page Header -->
+    <header class="page-header py-5 bg-light">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-8">
+                    <h1 class="display-4 mb-3">Academics & Resources</h1>
+                    <p class="lead mb-0">Explore our academic programs, curriculum, and student resources designed to support success at every level.</p>
+                </div>
+                <div class="col-lg-4 text-lg-end">
+                    <div class="resource-badge">
+                        <div class="badge-icon bg-success">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="badge-text">
+                            <div class="badge-count">98%</div>
+                            <div class="badge-label">Graduation Rate</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Academic Programs -->
+    <section class="academic-programs py-5">
+        <div class="container">
+            <h2 class="section-title text-center mb-5">Academic Programs</h2>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div class="program-card card h-100">
+                        <div class="card-header bg-primary text-white">
+                            <h3 class="mb-0">STEM Academy</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>Our STEM program offers advanced coursework in science, technology, engineering, and mathematics with hands-on project-based learning.</p>
+                            <ul class="program-features">
+                                <li><i class="fas fa-check text-success me-2"></i> Advanced Placement courses</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Robotics and coding labs</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Industry partnerships</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Research opportunities</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="btn btn-outline-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="program-card card h-100">
+                        <div class="card-header bg-success text-white">
+                            <h3 class="mb-0">Humanities</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>Our humanities program fosters critical thinking, communication skills, and cultural understanding through literature, history, and arts.</p>
+                            <ul class="program-features">
+                                <li><i class="fas fa-check text-success me-2"></i> Award-winning debate team</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Creative writing workshops</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Study abroad opportunities</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Literary magazine</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="btn btn-outline-success">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="program-card card h-100">
+                        <div class="card-header bg-info text-white">
+                            <h3 class="mb-0">Arts Conservatory</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>The arts conservatory provides intensive training in visual arts, music, theater, and dance with professional-grade facilities.</p>
+                            <ul class="program-features">
+                                <li><i class="fas fa-check text-success me-2"></i> Recording studio</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Darkroom and digital arts lab</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Annual art exhibitions</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Master classes with artists</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="btn btn-outline-info">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="program-card card h-100">
+                        <div class="card-header bg-warning text-dark">
+                            <h3 class="mb-0">Athletics</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>Our athletic programs promote teamwork, discipline, and physical fitness with competitive teams in 12 different sports.</p>
+                            <ul class="program-features">
+                                <li><i class="fas fa-check text-success me-2"></i> State championship teams</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Athletic scholarships</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Sports medicine program</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Fitness center</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="btn btn-outline-warning">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="program-card card h-100">
+                        <div class="card-header bg-danger text-white">
+                            <h3 class="mb-0">Special Education</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>We provide comprehensive support services for students with diverse learning needs in an inclusive environment.</p>
+                            <ul class="program-features">
+                                <li><i class="fas fa-check text-success me-2"></i> Individualized education plans</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Speech and occupational therapy</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Transition services</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Peer mentoring</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="btn btn-outline-danger">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="program-card card h-100">
+                        <div class="card-header bg-secondary text-white">
+                            <h3 class="mb-0">College Prep</h3>
+                        </div>
+                        <div class="card-body">
+                            <p>Our college readiness program ensures students are prepared for higher education through comprehensive guidance.</p>
+                            <ul class="program-features">
+                                <li><i class="fas fa-check text-success me-2"></i> SAT/ACT prep courses</li>
+                                <li><i class="fas fa-check text-success me-2"></i> College application workshops</li>
+                                <li><i class="fas fa-check text-success me-2"></i> University visits</li>
+                                <li><i class="fas fa-check text-success me-2"></i> Scholarship assistance</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="btn btn-outline-secondary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Student Resources -->
+    <section class="student-resources py-5 bg-light">
+        <div class="container">
+            <h2 class="section-title text-center mb-5">Student Resources</h2>
+            <div class="row g-4">
+                <div class="col-lg-3 col-md-6">
+                    <div class="resource-card card h-100">
+                        <div class="card-body text-center">
+                            <div class="resource-icon bg-primary text-white mb-4">
+                                <i class="fas fa-book-open"></i>
+                            </div>
+                            <h4 class="mb-3">Library</h4>
+                            <p>Access our digital catalog, research databases, and online resources.</p>
+                            <a href="#" class="btn btn-sm btn-outline-primary">Visit Library</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="resource-card card h-100">
+                        <div class="card-body text-center">
+                            <div class="resource-icon bg-success text-white mb-4">
+                                <i class="fas fa-laptop-code"></i>
+                            </div>
+                            <h4 class="mb-3">Tech Support</h4>
+                            <p>Get help with school devices, software, and online learning platforms.</p>
+                            <a href="#" class="btn btn-sm btn-outline-success">Tech Help</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="resource-card card h-100">
+                        <div class="card-body text-center">
+                            <div class="resource-icon bg-info text-white mb-4">
+                                <i class="fas fa-heart"></i>
+                            </div>
+                            <h4 class="mb-3">Counseling</h4>
+                            <p>Academic, career, and personal counseling services for all students.</p>
+                            <a href="#" class="btn btn-sm btn-outline-info">Counseling Center</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="resource-card card h-100">
+                        <div class="card-body text-center">
+                            <div class="resource-icon bg-warning text-white mb-4">
+                                <i class="fas fa-utensils"></i>
+                            </div>
+                            <h4 class="mb-3">Lunch Menus</h4>
+                            <p>View
